# gfx-basic

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: deps.cmake
docs/: coding-style.md
docs/troubleshooting/: issues.md
dx12/: 01_triangle.cpp  CMakeLists.txt
dx12/core/: DXBaseApp.cpp  DXBaseApp.h
opengl/: 01_triangle.cpp  02_texture.cpp  03_transformation.cpp  04_lighting.cpp  CMakeLists.txt
opengl/core/: GLBaseApp.cpp  GLBaseApp.h  GLMesh.cpp  GLMesh.h
vulkan/: 01_triangle.cpp  CMakeLists.txt
vulkan/core/: VKBaseApp.cpp  VKBaseApp.h
